frontend: fix backup view jumping long list
In earlier BitBoxApp versions it was possible to create new backups
of the same seed, so some old users might have long lists.
Selecting a backup from the end of the list currently causes a
weird jump in the UI and messes up scrolling.

This change fixes the jumping / scrolling when selecting a
backup of the end.

Also fixed displaying very long backup names, that they can break
onto 2 lines.

--- a/frontends/web/src/components/backups/backups.css
+++ b/frontends/web/src/components/backups/backups.css
@@ -6,10 +6,14 @@
 }
 
 .listContainer {
-    max-height: 320px;
-    width: 100%;
-    overflow: scroll;
     border: solid 1px var(--color-lightgray);
+    display: flex;
+    flex-direction: column;
+    max-height: 320px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    position: relative;
+    width: 100%;
 }
 
 .table {
@@ -41,6 +45,7 @@
 
 .backupItem + label {
     color: var(--color-dark);
+    word-break: break-all;
 }
 
 .backupID {
